syntax = "proto3";

import "populous.proto";
import "empty.proto";

package trident;

// Exported interface for the Trident service.
service Trident {
  // Submit a GAPF and return the GAPF with any additions from the server.
  rpc SubmitGAPF(GAPF) returns (GAPF) {}

  // Accept a Faculty and return the GAPF associated with that Faculty.
  rpc GetGAPF(GetGAPFRequest) returns (GAPF) {}

  // Retrieve a list of all GAPF status.
  rpc GetAllGAPF(Empty) returns (GAPFList) {}
}

message GAPF {
  int32 facultyId = 1;
  int32 created = 2; // UNIX timestamps should be int64, but long is 
  int32 lastModified = 3; // not well supported in Javascript
  GAPFStatus status = 4;
  repeated Document attachedDocuments = 5;
}

enum GAPFStatus {
  SUBMITTED = 0;
  BUDGET_ALLOCATED = 1;
}

message Document {
  string name = 1;
  string link = 2;
  int32 attachedDate = 3;
}

message GAPFList {
  repeated GAPF applications = 1;
}

message GetGAPFRequest {
  int32 facultyId = 1;
}